<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_popular">Sort By Most Popular</string>
    <string name="sort_rating">Sort By Highest Rated</string>
    <string name="sort_favorites">Show Favorites</string>
    <string name="error_no_results">No results found. Check your network connection.</string>
    <string name="error_no_videos">Cannot fetch videos. Check your network connection.</string>
    <string name="refresh">Refresh</string>

    <string name="rating_denominator">%1$s/10</string>

    <!-- Detail Activity -->
    <string name="movie_title">Movie Title</string>
    <string name="user_rating">User Rating</string>
    <string name="no_rating">No user rating found</string>
    <string name="release_date">Release Date</string>
    <string name="no_date">No release date found</string>
    <string name="no_overview">No plot summary found</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="videos_label">Trailers:</string>
    <string name="reviews_label">User Reviews:</string>
    <string name="menu_detail_share">Share Trailer</string>
    <string name="error_share_novideo">Cannot share movie trailer. None found</string>
    <string name="share_subject">Check out this movie trailer!</string>
    <string name="share_chooser_title">Share movie trailer</string>

    <!-- content descriptions -->
    <string name="desc_divider">divider</string>
    <string name="desc_movie_thumbnail">Movie thumbnail image</string>
    <string name="desc_favorite_icon">Favorite icon</string>
    <string name="desc_play_icon">Play video</string>

</resources>
