<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_popular"
        android:id="@+id/menu_sort_mostpopular"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:title="@string/sort_rating"
        android:id="@+id/menu_sort_rating"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:title = "@string/sort_favorites"
        android:id="@+id/menu_sort_favorites"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item
        android:title="@string/refresh"
        android:id="@+id/menu_refresh"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>