<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        tools:context="com.example.android.popularmovies.DetailActivity">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textColor="@color/textTitle"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/user_rating"
                android:textColor="@color/textDetails"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/detail_rating_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/no_rating"
                android:textColor="@color/textDetails"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/release_date"
                android:textColor="@color/textDetails"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/detail_releasedate_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/no_date"
                android:textColor="@color/textDetails"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/no_overview"
            android:textColor="@color/textDetails"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>